Removed useless methods